--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 }
 
 .navbar a {
-    text-decoration: none;
+    text-decoration: underline;
     color: black;
     padding: 1vh;
     text-align: center;
