--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center; 
     align-items: center;     
-    background-color: transparent;
+    background-color: white;
     height: 8vh;
     position: absolute;
     width: 100%;
