--- a/style.css
+++ b/style.css
@@ -41,5 +41,6 @@
     height: 50vh;
     background-size: cover;
     background-position: center;
-     background-attachment: fixed;
+    background-attachment: fixed;
+    position: fixed;
 }
