--- a/style.css
+++ b/style.css
@@ -42,5 +42,5 @@
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    position: fixed;
+    position: absolute;
 }
