--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     align-items: center;     
     background-color: white;
     height: 8vh;
-    position: absolute;
+    position: fixed;
     width: 100%;
     padding: 0; 
     margin: 0; 
