--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-body {
-    margin: 0;
-    width: 100vw;
-    height: 100vh;
-}
 .navbar {
     display: flex;
     justify-content: center; 
@@ -41,10 +36,11 @@ body {
 }
 
 .image-container{
-    text-align: center;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
     position: fixed;
-    height: 92vh;
+    right: 0;
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+    object-fit: fill;
+    z-index:-100;
 }
