--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     justify-content: center; 
     align-items: center;     
     background-color: white;
-    height: 8vh;
+    min-height: 8vh;
     width: 100%;
     padding: 0; 
     margin: 0; 
