--- a/style.css
+++ b/style.css
@@ -39,8 +39,8 @@
     position: fixed;
     right: 0;
     bottom: 0;
-    min-width: 100%; 
-    min-height: 100%;
+    min-width: 100vh; 
+    min-height: 100vw;
     object-fit: fill;
     z-index:-100;
 }
