--- a/style.css
+++ b/style.css
@@ -58,11 +58,19 @@ html, body {
     height: 80vh;
     width: 120vh;
     margin-bottom: 15px;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: black;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
     top: 15vh;
   }
-
+.code-container p{
+    text-decoration: none;
+    font-weight: bold;
+    color:white;
+    padding: 1vh;
+    text-align: left;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 3vh;
+}
 
